--- a/DialogueManager/src/styles/CharacterSelection.css
+++ b/DialogueManager/src/styles/CharacterSelection.css
@@ -5,8 +5,8 @@
     min-height: calc(100vh - 126px);
     justify-content: center;
     background-color: #6d727d;
-    border-left: 2px solid var(--accent-color);
-    border-right: 2px solid var(--accent-color);
+    border-left: 1px solid var(--accent-color);
+    border-right: 1px solid var(--accent-color);
     border-left-color: var(--accent-color);
     border-right-color: var(--accent-color);
 }
