--- a/DialogueManager/src/styles/Register.css
+++ b/DialogueManager/src/styles/Register.css
@@ -23,9 +23,9 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: var(--main-color);
-    color: var(--accent-color);
-    border: 2px solid var(--main-color);
+    background-color: var(--accent-color);
+    color: var(--main-color);
+    border: 2px solid var(--accent-color);
     border-radius: 8px;
     transition-duration: 0.1s;
     height: 40px;
@@ -36,9 +36,9 @@
 }
 
 .button-register:hover {
-    color: var(--main-color);
-    border: 2px solid var(--main-color);
-    background-color: var(--accent-color);
+    color: var(--accent-color);
+    border: 2px solid var(--accent-color);
+    background-color: var(--main-color);
 }
 
 .button-register:focus {
@@ -47,8 +47,8 @@
 }
 
 .button-register:active {
-    color: var(--accent-color);
-    background-color: var(--main-color);
+    color: var(--main-color);
+    background-color: var(--accent-color);
     transform: translateY(2px);
 }
 
@@ -68,7 +68,8 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    background-color: var(--accent-color);
+    background-color: var(--main-color);
+    border: 1px solid var(--accent-color);
 }
 
 .margin-top {
@@ -83,7 +84,7 @@
 }
 
 .text {
-    color: var(--main-color)
+    color: var(--accent-color)
 }
 
 .text-field-register {
@@ -94,14 +95,14 @@
 
 .icon-user {
     margin: 12px;
-    color: var(--main-color);
+    color: var(--accent-color);
     font-size: 6rem;
 }
 
 @media screen and (max-width: 550px) {
     .icon-user{
         margin: 12px;
-        color: var(--main-color);
+        color: var(--accent-color);
         font-size: 4rem;
     }
 
@@ -110,18 +111,14 @@
         display: flex;
         flex-direction: column;
         justify-content: center;
-        background-color: var(--accent-color);
+        background-color: var(--main-color);
     }
 
     .register-container {
         border-radius: 8px;
         display: flex;
         align-self: center;
-        margin-top: 33%;
+        margin: 0 auto;
         max-width: 800px;
     }
-
-    /*.max-height-container {*/
-    /*    min-height: calc(100vh - 150px);*/
-    /*}*/
 }
