--- a/DialogueManager/src/styles/Responsive.css
+++ b/DialogueManager/src/styles/Responsive.css
@@ -57,6 +57,7 @@
     align-self: center;
     margin-block: 0;
     transition: all 0.3s ease;
+    z-index: 9999;
 }
 
 .res-item {
@@ -159,6 +160,8 @@
             margin-top: 0;
             margin-bottom: 0;
             border-bottom-left-radius: 8px;
+            border-left: 1px solid var(--accent-color);
+            border-bottom: 1px solid var(--accent-color);
         }
 
         .res-menu.active {
